backend/nodemon.log
[33m[nodemon] 2.0.22[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): src/**/*[39m
[33m[nodemon] watching extensions: js,mjs,json[39m
[32m[nodemon] starting `npx ts-node src/app.ts`[39m
/workspaces/Marketash-Agri-connect-kenya/agriconnect-kenya/backend/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
src/app.ts(17,10): error TS2614: Module '"./middleware/errorHandler"' has no exported member 'errorHandler'. Did you mean to use 'import errorHandler from "./middleware/errorHandler"' instead?

    at createTSError (/workspaces/Marketash-Agri-connect-kenya/agriconnect-kenya/backend/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/workspaces/Marketash-Agri-connect-kenya/agriconnect-kenya/backend/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/workspaces/Marketash-Agri-connect-kenya/agriconnect-kenya/backend/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/workspaces/Marketash-Agri-connect-kenya/agriconnect-kenya/backend/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/workspaces/Marketash-Agri-connect-kenya/agriconnect-kenya/backend/node_modules/ts-node/src/index.ts:1617:30)
    at node:internal/modules/cjs/loader:1895:10
    at Object.require.extensions.<computed> [as .ts] (/workspaces/Marketash-Agri-connect-kenya/agriconnect-kenya/backend/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1465:32)
    at Function._load (node:internal/modules/cjs/loader:1282:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2614 ]
}
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
